// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.providers.nscloud;

option go_package = "namespacelabs.dev/foundation/internal/providers/nscloud";

message PrebuiltCluster {
    string cluster_id        = 1;
    string api_endpoint      = 4;
    bytes  serialized_config = 2;  // Deprecated, always fetched now.
    bool   ephemeral         = 3;
}
